@@ -50,6 +50,46 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                <artifactId>launch4j-maven-plugin</artifactId>
+                <version>1.7.21</version>
+                <executions>
+                    <execution>
+                        <id>l4j-clui</id>
+                        <phase>package</phase>
+                        <goals><goal>launch4j</goal></goals>
+                        <configuration>
+                            <headerType>console</headerType>
+                            <outfile>target/Fishing.exe</outfile>
+                            <jar>target/Fishing-1.0-SNAPSHOT-jar-with-dependencies.jar</jar>
+                            <errTitle>Fishing</errTitle>
+                            <classPath>
+                                <mainClass>Fishing.FishingApp</mainClass>
+                                <addDependencies>false</addDependencies>
+                                <preCp>anything</preCp>
+                            </classPath>
+                            <jre>
+                                <minVersion>1.8.0</minVersion>
+                                <opts>
+                                    <opt>-Djava.endorsed.dirs=./endorsed</opt>
+                                </opts>
+                            </jre>
+                            <versionInfo>
+                                <fileVersion>1.0.0.0</fileVersion>
+                                <txtFileVersion>v1.0.0.0</txtFileVersion>
+                                <fileDescription>A simple fishing game</fileDescription>
+                                <copyright>(c) 2011 Brad Fisher</copyright>
+                                <productVersion>1.0.0.0</productVersion>
+                                <txtProductVersion>v1.0.0.0</txtProductVersion>
+                                <productName>Fishing Game</productName>
+                                <internalName>Fishing</internalName>
+                                <originalFilename>Fishing.exe</originalFilename>
+                            </versionInfo>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
